# sefkhet-abwy

./: .aicoe-ci.yaml  .coafile  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .zuul.yaml  CHANGELOG.md  OWNERS  Pipfile  README.md  chatbot  get_member_userid.py  label_normalizer  merge_master_into_pullrequest  milestone_creator  new_label_normalizer  pyproject.toml  reno.yaml  review-manager
.github/ISSUE_TEMPLATE/: quay_project_request.md
.meteor.d/: aicoe-ci.yaml  kustomization.yaml
aicoe/sesheta/: __init__.py  chatbot.py  github_graphql_query.py  label_normalizer.py  merge_master_into_pullrequest.py  messages.py  metrics.py  milestone_creator.py  new_label_normalizer.py  review_manager.py  stalled_pr_notifier.py  utils.py  webhook_receiver.py
aicoe/sesheta/actions/: __init__.py  chat.py  common.py  label.py  pull_request.py
fixtures/: MDExOlB1bGxSZXF1ZXN0MzI2Mzk0MTkw.json  hangouts_chat_message.json  pull_request_148.json  pull_request_150.json  pull_request_2.json
releasenotes/notes/: with-metrics-4d1f87b636d84c8e.yaml
tests/: __init__.py  conclude_reviewer_list_test.py  get_intent_test.py  has_label_test.py  needs_rebase_test.py
